Fixes issue with horizontal scroll @ Asistencia detail page

--- a/assets/css/source/_asistencia_detail.scss
+++ b/assets/css/source/_asistencia_detail.scss
@@ -1,4 +1,8 @@
 .asistencia-detail-page{
+
+/*     section, div{
+        border: 1px solid lime;
+    } */
     
     .asistencia-top-banner{
         color: $darkblue;
@@ -89,6 +93,7 @@
     }
 
     .banner-bottom{
+        margin: 0;
         background-color: $lightpeach;
 
         .caution-icon{
